--- a/Components/Pages/Dog.razor
+++ b/Components/Pages/Dog.razor
@@ -1,16 +1,24 @@
-@page "/dog"
+@page "/"
 @rendermode InteractiveServer
 
 <PageTitle>Dog</PageTitle>
 
 <p>Dog</p>
 <button @onclick="GetDog">GetDog</button>
+<button @onclick="GetDogFact">GetDogFact</button>
 <img src="@img" />
+<p>@fact</p>
 
 @code {
     string img = "";
+    string fact = "";
     private void GetDog() {
         var dis = new DogImageService();
         img = dis.GetImage();
+    }
+
+    private void GetDogFact() {
+        var factService = new DogFactService();
+        fact = factService.GetFact();
     }
 }
