--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -1,6 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
+    <link href="https://fonts.cdnfonts.com/css/good-dog" rel="stylesheet">
     <main>
         @Body
     </main>
