--- a/Components/Pages/Dog.razor
+++ b/Components/Pages/Dog.razor
@@ -4,7 +4,7 @@
 <PageTitle>Dog</PageTitle>
 
 <div class="container text-center">
-    <h1>Dogs</h1>
+    <h1>Dogs On Demand!</h1>
     <div class="row" onload="OnLoad">
         <div class="col">
         </div>
@@ -13,10 +13,10 @@
                 <img src="@img" class="img-max-size" />
             </div>
             <p>@fact</p>
-            <button @onclick="GetDog" class="btn btn-outline-primary">GetDog</button>
-            <button @onclick="GetDogFact" class="btn btn-outline-primary">GetDogFact</button>
+            <button @onclick="GetDog" class="btn btn-dark btn-lg">GetDog</button>
+            <button @onclick="GetDogFact" class="btn btn-dark btn-lg">GetDogFact</button>
         </div>
-        <div class="col">
+        <div class=" col">
         </div>
     </div>
 </div>
@@ -30,14 +30,27 @@
     }
 
     .img-container {
-        height: 60vh;
+        height: 55vh;
         width: 100%;
+    }
+
+    img {
         border: solid 2px;
+    }
+
+    h1 {
+        font-family: 'GoodDog Cool';
+        font-size: 10vh;
     }
 
     p {
         padding: 1rem;
-        height: 10vh;
+        height: 15vh;
+        font-size: x-large;
+    }
+
+    button {
+        margin: 1rem;
     }
 </style>
 
