--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -10,3 +10,6 @@
 @using Dogs.Components
 @using Dogs.Services
 @using Dogs.Services.Implementations
+@using Dogs.Adapters
+@using Dogs.Adapters.Implementations
+@using Dogs.Types
