--- a/Components/Pages/Dog.razor
+++ b/Components/Pages/Dog.razor
@@ -8,15 +8,15 @@
     <div class="row" onload="OnLoad">
         <div class="col">
         </div>
-        <div class="col-6">
+        <div class="col-8">
             <div class="img-container">
                 <img src="@imgUrl" class="img-max-size" />
             </div>
             <p>@fact</p>
             <div class="row">
                 <div class="col">
-                    <button @onclick="GetDog" class="btn btn-dark btn-lg">GetDog</button>
-                    <button @onclick="GetDogFact" class="btn btn-dark btn-lg">GetDogFact</button>
+                    <button @onclick="GetDog" class="btn btn-dark btn-lg">Dog 🗘</button>
+                    <button @onclick="GetDogFact" class="btn btn-dark btn-lg">Fact 🗘</button>
                 </div>
             </div>
             <div class="row">
@@ -40,7 +40,7 @@
     }
 
     .img-container {
-        height: 55vh;
+        height: 50vh;
         width: 100%;
     }
 
@@ -55,7 +55,7 @@
 
     p {
         padding: 1rem;
-        height: 15vh;
+        height: 17vh;
         font-size: x-large;
     }
 
